--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
         </div>
     </body>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="objects.js"></script>
 </html>
